# dyno_firmware

./: CMakeLists.txt  README.md  prj.conf
boards/: raytac_mdbt50q_db_40.overlay  xiao_ble_nrf52840_sense.overlay
src/: ads1220.c  ads1220.h  main.c
